bevy_elf_macros/tests/ui/fail/implicit_on_no_handle.rs
use bevy_elf_macros::FromDef;

#[derive(FromDef)]
#[allow(unused)]
struct Foo {
    #[elf(implicit)]
    x: bool,
}

fn main() {}
